...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Category" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="FAH-bF-NUW">
                                                            <rect key="frame" x="8" y="8" width="135" height="33"/>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
...
                        <viewLayoutGuide key="safeArea" id="Hf2-uc-nyz"/>
                    </view>
                    <navigationItem key="navigationItem" title="Budget" id="3kp-Gt-pSs">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Dve-AP-YOK">
                            <connections>
...
                                <rect key="frame" x="20" y="140" width="374" height="45"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accounts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NBy-a3-cFC">
                                        <rect key="frame" x="20" y="12" width="74" height="21"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Continue"/>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jv2-f4-R1H" customClass="MDCProgressView">
...
                                <rect key="frame" x="20" y="318" width="374" height="110"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Giro account" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gmL-3W-ZRC">
                                        <rect key="frame" x="117" y="0.0" width="240" height="50"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0,00 €" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sAk-0c-j8r">
                                        <rect key="frame" x="114.5" y="58" width="242.5" height="50"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
...
                                <rect key="frame" x="20" y="438" width="374" height="50"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Create account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L6P-JU-Nes" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Spendings" image="Pie Chart" id="GNX-Cg-YA2"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="RaB-ju-8VE">
...
                        <viewLayoutGuide key="safeArea" id="xLo-AP-qya"/>
                    </view>
                    <navigationItem key="navigationItem" title="Transactions" id="6XQ-7K-xRJ"/>
                    <connections>
                        <outlet property="tableView" destination="b8m-qa-qFV" id="jiy-Iq-0fl"/>
...
