...
        incomeItem.buttonColor = Model.shared.allowedToAddTransaction() ? .incomeColor : .gray
        transferItem.buttonColor = Model.shared.allowedToAddTransaction() ? .transferColor : .gray
        expenseItem.buttonColor = Model.shared.allowedToAddTransaction() ? .expenseColor : .gray
    }
    
    private func setup() {
        self.accessibilityLabel = NSLocalizedString("Add new transaction", comment: "")

        buttonColor = .white
        
        if #available(iOS 13.0, *) {
            buttonColor = UIColor.tertiarySystemGroupedBackground
        }
...
        }
        incomeItem.icon = UIImage.init(named: "euro")?.withRenderingMode(.alwaysTemplate)
        incomeItem.title = NSLocalizedString("Income", comment: "")
        incomeItem.tintColor = .white
        incomeItem.buttonColor = Model.shared.allowedToAddTransaction() ? .incomeColor : .gray
        incomeItem.size = itemSize
        incomeItem.accessibilityLabel = NSLocalizedString("New Income", comment: "As in: new income transactions")

        addItem(item: incomeItem)
        
        transferItem.titleColor = .darkText
        if #available(iOS 13.0, *) {
            transferItem.titleColor = UIColor.label
...
